# neuralmed-desafio

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.sh
docs/: neuralmed-desafio.drawio
src/bigquery/: exec_bq.sh
src/bigquery/neuralmed_prep/: completude.sql  raw_tables.sql  score.sql  solucao_final.sql
src/pyspark/: start.py
src/pyspark/neuralmed_raw/: pipeline.py
src/pyspark/neuralmed_raw/utils/: constants.py  helpers.py
src/shared/: config_schemas.json  credentials.json
