[tool.poetry]
name = "neuralmed-desafio"
version = "0.0.1"
description = "Desafio de Engeharia de dados"
authors = ["Alan <alan.viegas@gmail.com>"]

packages = [
    {include = "neuralmed_raw", from="src/pyspark"},
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pytz = "^2023.3"

[tool.poetry.dev-dependencies]
pyspark = "^3.2.1"
pytest = "^6.2.2"
make = "^0.1.6"
black = "^22.3"
flake8 = "^3.8.4"
safety = "^1.10.3"
vulture = "^2.3"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
